# Eye-Tracker

./: CaptureData.py  GUImain.ui  LICENSE.txt  Makefile  README.md  calibrate_threshold.py  circle.js  imageprocess.py  index.html  main.py  process.py  pyproject.toml  requirements.txt  style.css  track.py
Python/: rand.py
Python/EyeDetect/Eye-Tracker/: GUI.py  GUImain.ui
project/: main.py  settings.py  video_source.py
project/capturers/: __init__.py  haar_blob.py
project/frame_sources/: __init__.py  camera.py  file.py  folder.py  video.py
project/gui/: application_window.py
