[tool.poetry]
name = "eye-tracker"
version = "0.2.0"
description = "An Eye-tracking solution"
authors = ["Stepan <stepanfilonov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.3"
opencv-python = "^4.5.4"
PyQt6 = "^6.2.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
